testsuite/bsc.interra/messages/EForeignNotBit/EForeignNotBit.bs.bsc-out.expected
checking package dependencies
compiling EForeignNotBit.bs
Error: "EForeignNotBit.bs", line 21, column 8: (T0012)
  Foreign function `function' has a non-Bit argument or result.
  Type: EForeignNotBit.MyType -> Prelude.Bit 32
